--- a/shop-left-sidebar.html
+++ b/shop-left-sidebar.html
@@ -85,16 +85,15 @@
                                                 <li><a href="about.html">Sobre</a></li>
                                                 <li><a href="service.html">Serviços</a></li>
                                                 <li><a href="team.html">Equipe</a></li>
-                                                <li><a href="locations.html">locais do mapa do Google</a></li>
                                             </ul>
                                         </li>
                     
                                         <li><a href="#">Comprar</a>
                                             <ul class="sub-menu">
-                                                <li><a href="shop-grid.html">Grade da loja</a></li>
-                                                <li><a href="shop-left-sidebar.html">Barra lateral esquerda da loja</a></li>
-                                                <li><a href="shop-right-sidebar.html">Comprar barra lateral direita</a></li>
-                                                <li><a href="product-details.html">Detalhes da loja</a></li>
+                                                <li><a href="shop-grid.html">Grade</a></li>
+                                                <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
+                                                <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
+                                                <li><a href="product-details.html">Detalhes</a></li>
                                                 <li><a href="account.html">Minha conta</a></li>
                                                 <li><a href="register.html">Registro</a></li>
                                             </ul>
@@ -183,16 +182,15 @@
                             <li><a href="about.html">Sobre</a></li>
                             <li><a href="service.html">Serviços</a></li>
                             <li><a href="team.html">Equipe</a></li>
-                            <li><a href="locations.html">locais do mapa do Google</a></li>
                         </ul>
                     </li>
 
                     <li><a href="#">Comprar</a>
                         <ul class="sub-menu">
-                            <li><a href="shop-grid.html">Grade da loja</a></li>
-                            <li><a href="shop-left-sidebar.html">Barra lateral esquerda da loja</a></li>
-                            <li><a href="shop-right-sidebar.html">Comprar barra lateral direita</a></li>
-                            <li><a href="product-details.html"></a>Detalhes da loja</li>
+                            <li><a href="shop-grid.html">Grade</a></li>
+                            <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
+                            <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
+                            <li><a href="product-details.html"></a>Detalhes</li>
                             <li><a href="account.html">Minha conta</a></li>
                             <li><a href="register.html">Registro</a></li>
                         </ul>
@@ -205,7 +203,6 @@
                             <li><a href="service-details.html">Detalhes do serciços</a></li>
                             <li><a href="team.html">Equipe</a></li>
                             <li><a href="history.html">História</a></li>
-                            <li><a href="locations.html">Locais no mapa do Google</a></li>
                             <li><a href="contact.html">Contato</a></li>
                         </ul>
                     </li>
@@ -240,11 +237,11 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="ltn__breadcrumb-inner">
-                        <h1 class="page-title">Lateral esquerda da loja</h1>
+                        <h1 class="page-title">Lateral esquerda</h1>
                         <div class="ltn__breadcrumb-list">
                             <ul>
                                 <li><a href="index.html"><span class="ltn__secondary-color"><i class="fas fa-home"></i></span> Home</a></li>
-                                <li>Comprar</li>
+                                <li>Confira</li>
                             </ul>
                         </div>
                     </div>
