--- a/shop-left-sidebar.html
+++ b/shop-left-sidebar.html
@@ -943,13 +943,13 @@
                 <div class="row">
                     <div class="col-md-6 col-12">
                         <div class="ltn__copyright-design clearfix">
-                            <p>Todos os direitos reservados à empresa<span class="current-year"></span></p>
+                            <p>Todos os direitos reservados à empresa <span class="current-year"></span></p>
                         </div>
                     </div>
                     <div class="col-md-6 col-12 align-self-center">
                         <div class="ltn__copyright-menu text-right">
                             <ul>
-                                <li><a href="#">Termos e Condições</a></li>
+                                <li><a href="#">termos e Condições</a></li>
                                 <li><a href="#">Política de Privacidade</a></li>
                             </ul>
                         </div>
