--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                     </div>
                                     <div class="header-feature-info">
                                         <h6>telefone</h6>
-                                        <p><a href="tel:0123456789">+55 48 91-740401</a></p>
+                                        <p><a href="tel:0123456789">+55 48 91-740506</a></p>
                                     </div>
                                 </div>
                                 <div class="header-search-2">
@@ -124,12 +124,10 @@
 
                                             <li><a href="#">Comprar</a>
                                                 <ul class="sub-menu">
-                                                    <li><a href="shop-grid.html">Loja</a></li>
-                                                    <li><a href="shop-left-sidebar.html">Barra lateral esquerda da
-                                                            loja</a></li>
-                                                    <li><a href="shop-right-sidebar.html">Barra lateral direita da
-                                                            loja</a></li>
-                                                    <li><a href="product-details.html">Detalhes da loja</a></li>
+                                                    <li><a href="shop-grid.html">Grade</a></li>
+                                                    <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
+                                                    <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
+                                                    <li><a href="product-details.html">Detalhes</a></li>
                                                     <li><a href="account.html">Minha conta</a></li>
                                                 </ul>
                                             </li>
@@ -138,7 +136,7 @@
                                                 <ul class="sub-menu">
                                                     <li><a href="about.html">sobre</a></li>
                                                     <li><a href="service.html">Serviços</a></li>
-                                                    <li><a href="service-details.html">Detalhes do serviços</a></li>
+                                                    <li><a href="service-details.html">Detalhes</a></li>
                                                     <li><a href="team.html">Equipe</a></li>
                                                     <li><a href="history.html">História</a></li>
                                                     <li><a href="contact.html">Contato</a></li>
@@ -182,9 +180,9 @@
                         <li><a href="#">Comprar</a>
                             <ul class="sub-menu">
                                 <li><a href="shop-grid.html">Loja</a></li>
-                                <li><a href="shop-left-sidebar.html">Barra lateral esquerda da loja</a></li>
-                                <li><a href="shop-right-sidebar.html">Barra lateral direita da loja</a></li>
-                                <li><a href="product-details.html">Detalhes da loja</a></li>
+                                <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
+                                <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
+                                <li><a href="product-details.html">Detalhes</a></li>
                                 <li><a href="account.html">Minha conta</a></li>
                             </ul>
                         </li>
