--- a/service-details.html
+++ b/service-details.html
@@ -92,9 +92,9 @@
                                         <li><a href="#">Comprar</a>
                                             <ul class="sub-menu">
                                                 <li><a href="shop-grid.html">Loja</a></li>
-                                                <li><a href="shop-left-sidebar.html">Barra lateral esquerda da loja</a></li>
-                                                <li><a href="shop-right-sidebar.html">Barra lateral direita da loja</a></li>
-                                                <li><a href="product-details.html">Detalhes da loja</a></li>
+                                                <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
+                                                <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
+                                                <li><a href="product-details.html">Detalhes</a></li>
                                                 <li><a href="account.html">Minha conta</a></li>
                                             </ul>
                                         </li>
@@ -187,9 +187,9 @@
                     <li><a href="#">Comprar</a>
                         <ul class="sub-menu">
                             <li><a href="shop-grid.html">Loja</a></li>
-                            <li><a href="shop-left-sidebar.html">Barra lateral esquerda da loja</a></li>
-                            <li><a href="shop-right-sidebar.html">Barra lateral direita da loja</a></li>
-                            <li><a href="product-details.html"></a>Detalhes da loja</li>
+                            <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
+                            <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
+                            <li><a href="product-details.html">Detalhes</li>
                             <li><a href="account.html">Minha conta</a></li>
                         </ul>
                     </li>
@@ -418,14 +418,13 @@
                 <div class="row">
                     <div class="col-md-6 col-12">
                         <div class="ltn__copyright-design clearfix">
-                            <p>Todos os direitos reservados à empresa<span class="current-year"></span></p>
+                            <p>Todos os direitos reservados à empresa <span class="current-year"></span></p>
                         </div>
                     </div>
                     <div class="col-md-6 col-12 align-self-center">
                         <div class="ltn__copyright-menu text-right">
                             <ul>
                                 <li><a href="#">termos e Condições</a></li>
-                                <li><a href="#">Alegar</a></li>
                                 <li><a href="#">Política de Privacidade</a></li>
                             </ul>
                         </div>
