--- a/about.html
+++ b/about.html
@@ -90,7 +90,6 @@
                                                     <li><a href="about.html">Sobre</a></li>
                                                     <li><a href="service.html">Serviços</a></li>
                                                     <li><a href="team.html">Equipe</a></li>
-                                                    <li><a href="locations.html">locais do mapa do Google</a></li>
                                                 </ul>
                                             </li>
 
@@ -629,7 +628,7 @@
                                                 <i class="icon-placeholder"></i>
                                             </div>
                                             <div class="footer-address-info">
-                                                <p>Santa Catarina, São Paulo, Rio GRande do Sul</p>
+                                                <p>Santa Catarina, São Paulo, Rio Grande do Sul</p>
                                             </div>
                                         </li>
                                         <li>
@@ -637,7 +636,7 @@
                                                 <i class="icon-call"></i>
                                             </div>
                                             <div class="footer-address-info">
-                                                <p><a href="tel:+0123-456789">+0123-456789</a></p>
+                                                <p><a href="tel:+55 48 991740401">+55 48 991740401</a></p>
                                             </div>
                                         </li>
                                         <li>
@@ -654,6 +653,7 @@
                                     <ul>
                                         <li><a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
                                         <li><a href="#" title="Twitter"><i class="fab fa-twitter"></i></a></li>
+                                        <li><a href="#" title="Instagram"><i class="fab fa-instagram"></i></a></li>
                                         <li><a href="#" title="Youtube"><i class="fab fa-youtube"></i></a></li>
                                     </ul>
                                 </div>
@@ -665,77 +665,68 @@
                                 <div class="footer-menu">
                                     <ul>
                                         <li><a href="about.html">Sobre</a></li>
-                                        <li><a href="service-details.html">Blog</a></li>
-                                        <li><a href="product-details.html">Todos os produtos</a></li>
+                                        <li><a href="blog.html">Blog</a></li>
+                                        <li><a href="shop.html">Todos os produtos</a></li>
+                                        <li><a href="locations.html">Mapa de locais</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
+                        <div class="col-xl-2 col-md-6 col-sm-6 col-12">
+                            <div class="footer-widget footer-menu-widget clearfix">
+                                <h4 class="footer-title">Serviços</h4>
+                                <div class="footer-menu">
+                                    <ul>
+                                        <li><a href="login.html">Conecte-se</a></li>
+                                        <li><a href="account.html">Minha conta</a></li>
+                                        <li><a href="about.html">Termos e Condições</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-2 col-md-6 col-sm-6 col-12">
+                            <div class="footer-widget footer-menu-widget clearfix">
+                                <h4 class="footer-title">Atendimento ao cliente</h4>
+                                <div class="footer-menu">
+                                    <ul>
+                                        <li><a href="login.html">Conecte-se</a></li>
+                                        <li><a href="account.html">Minha conta</a></li>
+                                        <li><a href="contact.html"></a>Contate-nos</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-3 col-md-6 col-sm-12 col-12">
+                            <div class="footer-widget footer-newsletter-widget">
+                                <h5 class="mt-30">Aceitamos</h5>
+                                <img src="img/icons/payment-3.png" alt="Payment Image">
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-xl-2 col-md-6 col-sm-6 col-12">
-                        <div class="footer-widget footer-menu-widget clearfix">
-                            <h4 class="footer-title">Serviços</h4>
-                            <div class="footer-menu">
+                </div>
+            </div>
+            <div class="ltn__copyright-area ltn__copyright-2 section-bg-7  plr--5">
+                <div class="container-fluid ltn__border-top-2">
+                    <div class="row">
+                        <div class="col-md-6 col-12">
+                            <div class="ltn__copyright-design clearfix">
+                                <p>Todos os direitos reservados à empresa <span class="current-year"></span></p>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-12 align-self-center">
+                            <div class="ltn__copyright-menu text-right">
                                 <ul>
-                                    <li><a href="contact.html">Contato</a></li>
-                                    <li><a href="account.html">Minha conta</a></li>
-                                    <li><a href="about.html">Termos e Condições</a></li>
+                                    <li><a href="#">termos e Condições</a></li>
+                                    <li><a href="#">Política de Privacidade</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-2 col-md-6 col-sm-6 col-12">
-                        <div class="footer-widget footer-menu-widget clearfix">
-                            <h4 class="footer-title">Atendimento ao cliente</h4>
-                            <div class="footer-menu">
-                                <ul>
-                                    <li><a href="contact.html">Contato</a></li>
-                                    <li><a href="account.html">Minha conta</a></li>
-                                    <li><a href="service-details.html">Serviços</a</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-md-6 col-sm-12 col-12">
-                        <div class="footer-widget footer-newsletter-widget">
-                            <h5 class="mt-30">Aceitamos</h5>
-                            <img src="img/icons/payment-3.png" alt="Payment Image">
-                        </div>
-                    </div>
                 </div>
             </div>
-    </div>
-    <div class="ltn__copyright-area ltn__copyright-2 section-bg-7  plr--5">
-        <div class="container-fluid ltn__border-top-2">
-            <div class="row">
-                <div class="col-md-6 col-12">
-                    <div class="ltn__copyright-design clearfix">
-                        <p>Todos os direitos reservados à empresa <span class="current-year"></span></p>
-                    </div>
-                </div>
-                <div class="col-md-6 col-12 align-self-center">
-                    <div class="ltn__copyright-menu text-right">
-                        <ul>
-                            <li><a href="#">termos e Condições</a></li>
-                            <li><a href="#">Política de Privacidade</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    </footer>
-    </div>
-    <div class="preloader" id="preloader">
-        <div class="preloader-inner">
-            <div class="spinner">
-                <div class="dot1"></div>
-                <div class="dot2"></div>
-            </div>
-        </div>
+        </footer>
     </div>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 </body>
-
 </html>
