--- a/about.html
+++ b/about.html
@@ -93,18 +93,13 @@
                                                 </ul>
                                             </li>
 
-                                            <li class="menu-icon"><a href="#">Comprar</a>
-                                                <ul>
-                                                    <li><a href="#">Comprar</a>
-                                                        <ul class="sub-menu">
-                                                            <li><a href="shop-grid.html">Grade</a></li>
-                                                            <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
-                                                            <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
-                                                            <li><a href="product-details.html">Detalhes</a></li>
-                                                            <li><a href="account.html">Minha conta</a></li>
-                                                            <li><a href="register.html">Registro</a></li>
-                                                        </ul>
-                                                    </li>
+                                            <li><a href="#">Comprar</a>
+                                                <ul class="sub-menu">
+                                                    <li><a href="shop-grid.html">Grade</a></li>
+                                                    <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
+                                                    <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
+                                                    <li><a href="product-details.html">Detalhes</a></li>
+                                                    <li><a href="account.html">Minha conta</a></li>
                                                 </ul>
                                             </li>
 
@@ -112,11 +107,10 @@
                                                 <ul class="sub-menu">
                                                     <li><a href="about.html">sobre</a></li>
                                                     <li><a href="service.html">Serviços</a></li>
+                                                    <li><a href="service-details.html">Detalhes</a></li>
                                                     <li><a href="team.html">Equipe</a></li>
-                                                    <li><a href="login.html">Conecte-se</a></li>
                                                     <li><a href="history.html">História</a></li>
                                                     <li><a href="contact.html">Contato</a></li>
-
                                                 </ul>
                                             </li>
                                             <li><a href="contact.html">Contato</a></li>
