add change file

--- a/about.html
+++ b/about.html
@@ -109,6 +109,7 @@
                                                     <li><a href="service.html">Serviços</a></li>
                                                     <li><a href="service-details.html">Detalhes</a></li>
                                                     <li><a href="team.html">Equipe</a></li>
+                                                    <li><a href="login.html">Conecte-se</a></li>
                                                     <li><a href="history.html">História</a></li>
                                                     <li><a href="contact.html">Contato</a></li>
                                                 </ul>
