--- a/shop-right-sidebar.html
+++ b/shop-right-sidebar.html
@@ -91,10 +91,10 @@
                     
                                         <li><a href="#">Comprar</a>
                                             <ul class="sub-menu">
-                                                <li><a href="shop-grid.html">Loja</a></li>
-                                                <li><a href="shop-left-sidebar.html">Barra lateral esquerda da loja</a></li>
-                                                <li><a href="shop-right-sidebar.html">Barra lateral direita da loja</a></li>
-                                                <li><a href="product-details.html">Detalhes da loja</a></li>
+                                                <li><a href="shop-grid.html">Grade</a></li>
+                                                <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
+                                                <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
+                                                <li><a href="product-details.html">Detalhes</a></li>
                                                 <li><a href="account.html">Minha conta</a></li>
                                                 <li><a href="login.html">Entrar</a></li>
                                             </ul>
@@ -105,6 +105,7 @@
                                                 <li><a href="about.html">sobre</a></li>
                                                 <li><a href="service.html">Serviços</a></li>
                                                 <li><a href="team.html">Equipe</a></li>
+                                                <li><a href="login.html">Conecte-se</a></li>
                                                 <li><a href="history.html">História</a></li>
                                                 <li><a href="contact.html">Contato</a></li>
                     
@@ -188,10 +189,10 @@
 
                     <li><a href="#">Comprar</a>
                         <ul class="sub-menu">
-                            <li><a href="shop-grid.html">Loja</a></li>
-                            <li><a href="shop-left-sidebar.html">Barra lateral esquerda da loja</a></li>
-                            <li><a href="shop-right-sidebar.html">Barra lateral direita da loja</a></li>
-                            <li><a href="product-details.html"></a>Detalhes da loja</li>
+                            <li><a href="shop-grid.html">Grade</a></li>
+                            <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
+                            <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
+                            <li><a href="product-details.html"></a>Detalhes</li>
                             <li><a href="account.html">Minha conta</a></li>
                             <li><a href="login.html">Entrar</a></li>
                         </ul>
@@ -203,6 +204,7 @@
                             <li><a href="service.html">Serviços</a></li>
                             <li><a href="service-details.html">Detalhes do serviços</a></li>
                             <li><a href="team.html">Equipe</a></li>
+                            <li><a href="login.html">Conecte-se</a></li>
                             <li><a href="history.html">História</a></li>
                             <li><a href="contact.html">Contato</a></li>
                         </ul>
@@ -239,11 +241,11 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="ltn__breadcrumb-inner">
-                        <h1 class="page-title">Lateral direita da loja</h1>
+                        <h1 class="page-title">Lateral direita</h1>
                         <div class="ltn__breadcrumb-list">
                             <ul>
                                 <li><a href="index.html"><span class="ltn__secondary-color"><i class="fas fa-home"></i></span> Home</a></li>
-                                <li>Comprar</li>
+                                <li>Confira</li>
                             </ul>
                         </div>
                     </div>
@@ -920,7 +922,7 @@
                     </div>
                     <div class="col-xl-2 col-md-6 col-sm-6 col-12">
                         <div class="footer-widget footer-menu-widget clearfix">
-                            <h4 class="footer-title">Atendimento ao cliente</h4>
+                            <h4 class="footer-title">Cliente</h4>
                             <div class="footer-menu">
                                 <ul>
                                     <li><a href="contact.html">Contato</a></li>
