--- a/shop-right-sidebar.html
+++ b/shop-right-sidebar.html
@@ -858,6 +858,7 @@
                                     <img src="img/favicon.png" alt="Logo">
                                 </div>
                             </div>
+                            <p></p>
                             <div class="footer-address">
                                 <ul>
                                     <li>
@@ -865,7 +866,7 @@
                                             <i class="icon-placeholder"></i>
                                         </div>
                                         <div class="footer-address-info">
-                                            <p>Santa Catarina, São Paulo ,Rio Grande do Sul</p>
+                                            <p>Santa Catarina, São Paulo, Rio Grande do Sul</p>
                                         </div>
                                     </li>
                                     <li>
@@ -873,7 +874,7 @@
                                             <i class="icon-call"></i>
                                         </div>
                                         <div class="footer-address-info">
-                                            <p><a href="tel:+0123-456789">+0123-456789</a></p>
+                                            <p><a href="tel:+55 48 991740401">+55 48 991740401</a></p>
                                         </div>
                                     </li>
                                     <li>
@@ -902,7 +903,7 @@
                             <div class="footer-menu">
                                 <ul>
                                     <li><a href="about.html">Sobre</a></li>
-                                    <li><a href="service-details.html">Blog</a></li>
+                                    <li><a href="blog.html">Blog</a></li>
                                     <li><a href="product-details.html">Todos os produtos</a></li>
                                 </ul>
                             </div>
@@ -913,7 +914,7 @@
                             <h4 class="footer-title">Serviços</h4>
                             <div class="footer-menu">
                                 <ul>
-                                    <li><a href="contact.html">Contato</a></li>
+                                    <li><a href="contact.html">Conecte-se</a></li>
                                     <li><a href="account.html">Minha conta</a></li>
                                     <li><a href="about.html">Termos e Condições</a></li>
                                 </ul>
@@ -925,9 +926,9 @@
                             <h4 class="footer-title">Cliente</h4>
                             <div class="footer-menu">
                                 <ul>
-                                    <li><a href="contact.html">Contato</a></li>
+                                    <li><a href="login.html">Conecte-se</a></li>
                                     <li><a href="account.html">Minha conta</a></li>
-                                    <li><a href="service-details.html">Serviços</a</li>
+                                    <li><a href="contact.html"></a>Contate-nos</li>
                                 </ul>
                             </div>
                         </div>
@@ -952,7 +953,7 @@
                     <div class="col-md-6 col-12 align-self-center">
                         <div class="ltn__copyright-menu text-right">
                             <ul>
-                                <li><a href="#">Termos e Condições</a></li>
+                                <li><a href="#">termos e Condições</a></li>
                                 <li><a href="#">Política de Privacidade</a></li>
                             </ul>
                         </div>
