--- a/team.html
+++ b/team.html
@@ -85,16 +85,15 @@
                                                 <li><a href="about.html">Sobre</a></li>
                                                 <li><a href="service.html">Serviços</a></li>
                                                 <li><a href="team.html">Equipe</a></li>
-                                                <li><a href="locations.html">locais do mapa do Google</a></li>
                                             </ul>
                                         </li>
 
                                         <li><a href="#">Comprar</a>
                                             <ul class="sub-menu">
-                                                <li><a href="shop-grid.html">Grade da loja</a></li>
-                                                <li><a href="shop-left-sidebar.html">Barra lateral esquerda da loja</a></li>
-                                                <li><a href="shop-right-sidebar.html">Comprar barra lateral direita</a></li>
-                                                <li><a href="product-details.html">Detalhes da loja</a></li>
+                                                <li><a href="shop-grid.html">Grade</a></li>
+                                                <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
+                                                <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
+                                                <li><a href="product-details.html">Detalhes</a></li>
                                                 <li><a href="account.html">Minha conta</a></li>
                                                 <li><a href="register.html">Registro</a></li>
                                             </ul>
@@ -107,8 +106,8 @@
                                                 <li><a href="service-details.html">Detalhes do serviços</a></li>
                                                 <li><a href="team.html">Equipe</a></li>
                                                 <li><a href="history.html">História</a></li>
+                                                <li><a href="login.html">Conecte-se</a></li>
                                                 <li><a href="add-listing.html">Adiconar Listagem</a></li>
-                                                <li><a href="locations.html">Locais no mapa do Google</a></li>
                                                 <li><a href="contact.html">Contato</a></li>
                     
                                             </ul>
@@ -186,16 +185,15 @@
                             <li><a href="about.html">Sobre</a></li>
                             <li><a href="service.html">Serviços</a></li>
                             <li><a href="team.html">Equipe</a></li>
-                            <li><a href="locations.html">locais do mapa do Google</a></li>
                         </ul>
                     </li>
 
                     <li><a href="#">Comprar</a>
                         <ul class="sub-menu">
-                            <li><a href="shop-grid.html">Grade da loja</a></li>
-                            <li><a href="shop-left-sidebar.html">Barra lateral esquerda da loja</a></li>
-                            <li><a href="shop-right-sidebar.html">Comprar barra lateral direita</a></li>
-                            <li><a href="product-details.html">Detalhes da loja</a></li>
+                            <li><a href="shop-grid.html">Grade</a></li>
+                            <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
+                            <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
+                            <li><a href="product-details.html">Detalhes</a></li>
                             <li><a href="account.html">Minha conta</a></li>
                             <li><a href="register.html">Registro</a></li>
                         </ul>
@@ -206,9 +204,8 @@
                             <li><a href="service.html">Serviços</a></li>
                             <li><a href="service-details.html">Detalhes do serviços</a></li>
                             <li><a href="team.html">Equipe</a></li>
+                            <li><a href="login.html">Conecte-se</a></li>
                             <li><a href="history.html">História</a></li>
-                            <li><a href="add-listing.html">Adiconar Listagem</a></li>
-                            <li><a href="locations.html">Locais no mapa do Google</a></li>
                             <li><a href="contact.html">Contato</a></li>
 
                         </ul>
