--- a/shop-left-sidebar.html
+++ b/shop-left-sidebar.html
@@ -858,7 +858,7 @@
                                             <i class="icon-placeholder"></i>
                                         </div>
                                         <div class="footer-address-info">
-                                            <p>Snata Catarina, São Paulo, Rio Grande do Sul</p>
+                                            <p>Santa Catarina, São Paulo, Rio Grande do Sul</p>
                                         </div>
                                     </li>
                                     <li>
@@ -866,7 +866,7 @@
                                             <i class="icon-call"></i>
                                         </div>
                                         <div class="footer-address-info">
-                                            <p><a href="tel:+0123-456789">+0123-456789</a></p>
+                                            <p><a href="tel:+55 48 991740401">+55 48 991740401</a></p>
                                         </div>
                                     </li>
                                     <li>
@@ -895,7 +895,7 @@
                             <div class="footer-menu">
                                 <ul>
                                     <li><a href="about.html">Sobre</a></li>
-                                    <li><a href="service-details.html">Blog</a></li>
+                                    <li><a href="blog.html">Blog</a></li>
                                     <li><a href="product-details.html">Todos os produtos</a></li>
                                 </ul>
                             </div>
@@ -906,7 +906,7 @@
                             <h4 class="footer-title">Serviços</h4>
                             <div class="footer-menu">
                                 <ul>
-                                    <li><a href="contact.html">Contato</a></li>
+                                    <li><a href="contact.html">Conecte-se</a></li>
                                     <li><a href="account.html">Minha conta</a></li>
                                     <li><a href="about.html">Termos e Condições</a></li>
                                 </ul>
@@ -915,12 +915,12 @@
                     </div>
                     <div class="col-xl-2 col-md-6 col-sm-6 col-12">
                         <div class="footer-widget footer-menu-widget clearfix">
-                        <h4 class="footer-title">Atendimento ao cliente</h4>
+                            <h4 class="footer-title">Cliente</h4>
                             <div class="footer-menu">
                                 <ul>
-                                    <li><a href="contact.html">Contato</a></li>
+                                    <li><a href="login.html">Conecte-se</a></li>
                                     <li><a href="account.html">Minha conta</a></li>
-                                    <li><a href="service-details.html">Serviços</a</li>
+                                    <li><a href="contact.html"></a>Contate-nos</li>
                                 </ul>
                             </div>
                         </div>
