add change shop-left-sidebar.html and shop-right-sidebar.html

--- a/shop-left-sidebar.html
+++ b/shop-left-sidebar.html
@@ -138,6 +138,7 @@
                                 <li>
                                     <a href="#"><i class="icon-user"></i></a>
                                     <ul>
+                                        <li><a href="login.html">Conecte-se</a></li>
                                         <li><a href="register.html">Registro</a></li>
                                         <li><a href="account.html">Minha conta</a></li>
                                     </ul>
@@ -286,7 +287,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href="locations.html"><i class="flaticon-pin"></i> Ararangua, Santa Catarina</a>
+                                                            <a href=""><i class="flaticon-pin"></i> Ararangua, Santa Catarina</a>
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -318,11 +319,11 @@
                                                         <li class="sale-badg">Á venda</li>
                                                     </ul>
                                                 </div>
-                                                <h2 class="product-title"><a href="product-details.html">Casa nova</a></h2>
+                                                <h2 class="product-title"><a href="product-details.html">Casa bairro jardin das oliveiras</a></h2>
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href="locations.html"><i class="flaticon-pin"></i> Porto Algre, Rio Grande do Sul</a>
+                                                            <a href=""><i class="flaticon-pin"></i> Sombrio, Santa Catrina</a>
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -394,7 +395,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href="locations.html"><i class="flaticon-pin"></i> Torres, Rio Grand do Sul</a>
+                                                            <a href=""><i class="flaticon-pin"></i> Campinas, São paulo</a>
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -430,7 +431,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href="locations.html"><i class="flaticon-pin"></i> Torres, Rio Grande do Sul</a>
+                                                            <a href=""><i class="flaticon-pin"></i> Sorocaba, São Paulo</a>
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -466,7 +467,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href="locations.html"><i class="flaticon-pin"></i> Ararangua, Santa Catarina</a>
+                                                            <a href=""><i class="flaticon-pin"></i> Ararangua, Santa Catarina</a>
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -508,11 +509,11 @@
                                                         <span>$1.200<label>/Mês</label></span>
                                                     </div>
                                                 </div>
-                                                <h2 class="product-title"><a href="product-details.html">Casa nova</a></h2>
+                                                <h2 class="product-title"><a href="product-details.html">Casa nova, bairro aliança</a></h2>
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href="locations.html"><i class="flaticon-pin"></i> Torres, Rio Grande do Sul</a>
+                                                            <a href=""><i class="flaticon-pin"></i> Torres, Rio Grande do Sul</a>
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -547,11 +548,11 @@
                                                         <span>$349.900,00<label></label></span>
                                                     </div>
                                                 </div>
-                                                <h2 class="product-title"><a href="product-details.html">Casa Bairro Feliz</a></h2>
+                                                <h2 class="product-title"><a href="product-details.html">Casa Bairro alto feliz</a></h2>
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href="locations.html"><i class="flaticon-pin"></i> Torres, Rio Grande do Sul</a>
+                                                            <a href=""><i class="flaticon-pin"></i> Arárangua , Santa Catarina</a>
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -587,7 +588,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href="locations.html"><i class="flaticon-pin"></i> Ararangua, Santa Catarina</a>
+                                                            <a href=""><i class="flaticon-pin"></i> Ararangua, Santa Catarina</a>
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -623,7 +624,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href="locations.html"><i class="flaticon-pin"></i> Torres, Rio Grande do Sul</a>
+                                                            <a href=""><i class="flaticon-pin"></i> Torres, Rio Grande do Sul</a>
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -655,11 +656,11 @@
                                                         <span>$349.900,00<label></label></span>
                                                     </div>
                                                 </div>
-                                                <h2 class="product-title"><a href="product-details.html">Casa Bairro Feliz</a></h2>
+                                                <h2 class="product-title"><a href="product-details.html">Casa mato alto</a></h2>
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href="locations.html"><i class="flaticon-pin"></i> Torres, Rio Grande do Sul</a>
+                                                            <a href=""><i class="flaticon-pin"></i> Arárangua, santa Catarina</a>
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -831,7 +832,7 @@
                             <p>Podemos ajudá-lo a realizar o seu sonho de uma nova casa</p>
                         </div>
                         <div class="btn-wrapper">
-                            <a class="btn btn-effect-3 btn-white" href="contact.html">Explorar propriedades <i class="icon-next"></i></a>
+                            <a class="btn btn-effect-3 btn-white" href="product-details.html">Explorar propriedades <i class="icon-next"></i></a>
                         </div>
                     </div>
                 </div>
