--- a/shop-right-sidebar.html
+++ b/shop-right-sidebar.html
@@ -140,7 +140,7 @@
                                 <li>
                                     <a href="#"><i class="icon-user"></i></a>
                                     <ul>
-                                        <li><a href="login.html">Entrar</a></li>
+                                        <li><a href="login.html">Conecte-se</a></li>
                                         <li><a href="register.html">Registro</a></li>
                                         <li><a href="account.html">Minha conta</a></li>
                                     </ul>
