add change file

--- a/product-details.html
+++ b/product-details.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Imobiliaria Santos</title>
+    <title>Santos Imobiliária</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -143,7 +143,7 @@
                                     <li>
                                         <a href="#"><i class="icon-user"></i></a>
                                         <ul>
-                                            <li><a href="login.html">Entrar</a></li>
+                                            <li><a href="login.html">Conecte-se</a></li>
                                             <li><a href="register.html">Registro</a></li>
                                             <li><a href="account.html">Minha conta</a></li>
                                         </ul>
@@ -253,7 +253,7 @@
                                 <ul>
                                     <li><a href="index.html"><span class="ltn__secondary-color"><i
                                                     class="fas fa-home"></i></span> Home</a></li>
-                                    <li>Detalhes do produto</li>
+                                    <li>Detalhes da propiedade</li>
                                 </ul>
                             </div>
                         </div>
