add change file

--- a/shop-grid.html
+++ b/shop-grid.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Imobiliaria Santos</title>
+    <title>Santos Imobiliária</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -94,21 +94,20 @@
 
                                             <li><a href="#">Comprar</a>
                                                 <ul class="sub-menu">
-                                                    <li><a href="shop-grid.html">Loja</a></li>
-                                                    <li><a href="shop-left-sidebar.html">Barra lateral esquerda da
-                                                            loja</a></li>
-                                                    <li><a href="shop-right-sidebar.html">Barra lateral direita da
-                                                            loja</a></li>
-                                                    <li><a href="product-details.html">Detalhes da loja</a></li>
+                                                    <li><a href="shop-grid.html">Grade</a></li>
+                                                    <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
+                                                    <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
+                                                    <li><a href="product-details.html">Detalhes</a></li>
                                                     <li><a href="account.html">Minha conta</a></li>
                                                 </ul>
                                             </li>
 
                                             <li><a href="#">Páginas</a>
                                                 <ul class="sub-menu">
-                                                    <li><a href="about.html">sobre</a></li>
+                                                    <li><a href="about.html">Sobre</a></li>
                                                     <li><a href="service.html">Serviços</a></li>
                                                     <li><a href="team.html">Equipe</a></li>
+                                                    <li><a href="login.html">Conecte-se</a></li>
                                                     <li><a href="history.html">História</a></li>
                                                     <li><a href="contact.html">Contato</a></li>
 
@@ -196,10 +195,10 @@
 
                         <li><a href="#">Comprar</a>
                             <ul class="sub-menu">
-                                <li><a href="shop-grid.html">Loja</a></li>
-                                <li><a href="shop-left-sidebar.html">Barra lateral esquerda da loja</a></li>
-                                <li><a href="shop-right-sidebar.html">Barra lateral direita da loja</a></li>
-                                <li><a href="product-details.html">Detalhes da loja</a></li>
+                                <li><a href="shop-grid.html">Grade/a></li>
+                                <li><a href="shop-left-sidebar.html">Lateral esquerda </a></li>
+                                <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
+                                <li><a href="product-details.html">Detalhes</a></li>
                                 <li><a href="account.html">Minha conta</a></li>
                             </ul>
                         </li>
@@ -210,6 +209,7 @@
                                 <li><a href="service.html">Serviços</a></li>
                                 <li><a href="service-details.html">Detalhes do serviços</a></li>
                                 <li><a href="team.html">Equipe</a></li>
+                                <li><a href="login.html">Conecte-se</a></li>
                                 <li><a href="history.html">História</a></li>
                                 <li><a href="contact.html">Contato</a></li>
                             </ul>
@@ -246,12 +246,12 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="ltn__breadcrumb-inner">
-                            <h1 class="page-title">Grade da loja</h1>
+                            <h1 class="page-title">Encontrar imóvel</h1>
                             <div class="ltn__breadcrumb-list">
                                 <ul>
                                     <li><a href="index.html"><span class="ltn__secondary-color"><i
                                                     class="fas fa-home"></i></span> Home</a></li>
-                                    <li>Loja</li>
+                                    <li>Confira</li>
                                 </ul>
                             </div>
                         </div>
@@ -342,7 +342,7 @@
                                                     <div class="product-img-location">
                                                         <ul>
                                                             <li>
-                                                                <a href="locations.html"><i class="flaticon-pin"></i>
+                                                                <a href=""><i class="flaticon-pin"></i>
                                                                     Sombrio, Santa Catarina</a>
                                                             </li>
                                                         </ul>
@@ -383,7 +383,7 @@
                                                     <div class="product-img-location">
                                                         <ul>
                                                             <li>
-                                                                <a href="locations.html"><i class="flaticon-pin"></i>
+                                                                <a href=""><i class="flaticon-pin"></i>
                                                                     Torres, Rio Grand do Sul</a>
                                                             </li>
                                                         </ul>
@@ -424,7 +424,7 @@
                                                     <div class="product-img-location">
                                                         <ul>
                                                             <li>
-                                                                <a href="locations.html"><i class="flaticon-pin"></i>
+                                                                <a href=""><i class="flaticon-pin"></i>
                                                                     Torres, Rio Grande do Sul</a>
                                                             </li>
                                                         </ul>
@@ -465,7 +465,7 @@
                                                     <div class="product-img-location">
                                                         <ul>
                                                             <li>
-                                                                <a href="locations.html"><i class="flaticon-pin"></i>
+                                                                <a href=""><i class="flaticon-pin"></i>
                                                                     Ararangua, Santa Catarina</a>
                                                             </li>
                                                         </ul>
@@ -506,7 +506,7 @@
                                                     <div class="product-img-location">
                                                         <ul>
                                                             <li>
-                                                                <a href="locations.html"><i class="flaticon-pin"></i>
+                                                                <a href=""><i class="flaticon-pin"></i>
                                                                     Ararangua, Santa Catarina</a>
                                                             </li>
                                                         </ul>
@@ -557,7 +557,7 @@
                                                     <div class="product-img-location">
                                                         <ul>
                                                             <li>
-                                                                <a href="locations.html"><i class="flaticon-pin"></i>
+                                                                <a href=""><i class="flaticon-pin"></i>
                                                                     Ararangua, Santa Catarina</a>
                                                             </li>
                                                         </ul>
@@ -595,7 +595,7 @@
                                                         <div class="product-img-location">
                                                             <ul>
                                                                 <li>
-                                                                    <a href="locations.html"><i class="flaticon-pin"></i> Torres, Rio Grande do Sul</a>
+                                                                    <a href=""><i class="flaticon-pin"></i> Torres, Rio Grande do Sul</a>
                                                                 </li>
                                                             </ul>
                                                         </div>
@@ -632,7 +632,7 @@
                                                         <div class="product-img-location">
                                                             <ul>
                                                                 <li>
-                                                                    <a href="locations.html"><i class="flaticon-pin"></i> Torres, Rio Grande do Sul</a>
+                                                                    <a href=""><i class="flaticon-pin"></i> Torres, Rio Grande do Sul</a>
                                                                 </li>
                                                             </ul>
                                                         </div>
@@ -671,7 +671,7 @@
                                                         <div class="product-img-location">
                                                             <ul>
                                                                 <li>
-                                                                    <a href="locations.html"><i class="flaticon-pin"></i> Sombrio, Santa Catarina</a>
+                                                                    <a href=""><i class="flaticon-pin"></i> Sombrio, Santa Catarina</a>
                                                                 </li>
                                                             </ul>
                                                         </div>
@@ -708,7 +708,7 @@
                                                         <div class="product-img-location">
                                                             <ul>
                                                                 <li>
-                                                                    <a href="locations.html"><i class="flaticon-pin"></i> Tubarão, Santa Catarina</a>
+                                                                    <a href=""><i class="flaticon-pin"></i> Tubarão, Santa Catarina</a>
                                                                 </li>
                                                             </ul>
                                                         </div>
@@ -743,7 +743,7 @@
                                     <p>Podemos ajudá-lo a realizar o seu sonho de uma nova casa</p>
                                 </div>
                                 <div class="btn-wrapper">
-                                    <a class="btn btn-effect-3 btn-white" href="contact.html">Explorar propriedades<i class="icon-next"></i></a>
+                                    <a class="btn btn-effect-3 btn-white" href="product-details.html">Explorar propriedades<i class="icon-next"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -778,7 +778,7 @@
                                                     <i class="icon-call"></i>
                                                 </div>
                                                 <div class="footer-address-info">
-                                                    <p><a href="tel:+0123-456789">+0123-456789</a></p>
+                                                    <p><a href="tel:+55 48 991740401">+55 48 991740401</a></p>
                                                 </div>
                                             </li>
                                             <li>
@@ -807,7 +807,7 @@
                                     <div class="footer-menu">
                                         <ul>
                                             <li><a href="about.html">Sobre</a></li>
-                                            <li><a href="service-details.html">Blog</a></li>
+                                            <li><a href="blog.html">Blog</a></li>
                                             <li><a href="product-details.html">Todos os produtos</a></li>
                                         </ul>
                                     </div>
@@ -818,7 +818,7 @@
                                     <h4 class="footer-title">Serviços</h4>
                                     <div class="footer-menu">
                                         <ul>
-                                            <li><a href="contact.html">Contato</a></li>
+                                            <li><a href="contact.html">Conecte-se</a></li>
                                             <li><a href="account.html">Minha conta</a></li>
                                             <li><a href="about.html">Termos e Condições</a></li>
                                         </ul>
@@ -827,19 +827,19 @@
                             </div>
                             <div class="col-xl-2 col-md-6 col-sm-6 col-12">
                                 <div class="footer-widget footer-menu-widget clearfix">
-                                    <h4 class="footer-title">Atendimento ao cliente</h4>
+                                    <h4 class="footer-title">Cliente</h4>
                                     <div class="footer-menu">
                                         <ul>
-                                            <li><a href="contact.html">Contato</a></li>
+                                            <li><a href="login.html">Conecte-se</a></li>
                                             <li><a href="account.html">Minha conta</a></li>
-                                            <li><a href="service-details.html">Serviços</a</li>
+                                            <li><a href="contact.html"></a>Contate-nos</li>
                                         </ul>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-xl-3 col-md-6 col-sm-12 col-12">
                                 <div class="footer-widget footer-newsletter-widget">
-                                    <h5 class="mt-30">We Accept</h5>
+                                    <h5 class="mt-30">Aceitamos</h5>
                                     <img src="img/icons/payment-3.png" alt="Payment Image">
                                 </div>
                             </div>
@@ -851,7 +851,7 @@
                         <div class="row">
                             <div class="col-md-6 col-12">
                                 <div class="ltn__copyright-design clearfix">
-                                    <p>Todos os direitos reservados à empresa<span class="current-year"></span></p>
+                                    <p>Todos os direitos reservados à empresa <span class="current-year"></span></p>
                                 </div>
                             </div>
                             <div class="col-md-6 col-12 align-self-center">
